<resources>
    <string name="app_name">Sayara</string>
    <string name="title_home">Accueil</string>
    <string name="title_search">Recherche</string>
    <string name="title_listing">Moi</string>
    <string name="title_notification">Notification</string>
    <string name="title_add">Ajouter</string>
    <string name="search">Recherche</string>
    <string name="brands">Marques</string>
    <string name="see_all">voir tout</string>
    <string name="home">Accueil</string>
    <string name="msg_please_sign_in">Connectez-vous!</string>
    <string name="greeting">Bonjour</string>
    <string name="sign_in">Se connecter</string>
    <string name="search_hint">Rechercher des véhicules</string>
    <string name="skip">Passer</string>
    <string name="facebook_app_id">473074459902362</string>
    <string name="brands_error">Erreur lors du chargement des marques</string>
    <string name="order_error">Erreur lors du de lenvoi de la commande </string>

    <string name="models_error">Erreur lors du chargement des madeles</string>
    <string name="fb_login_protocol_scheme">fb410978659654516</string>

    <string name="preference_file_key">410978659654516410978659654556</string>
    <string name="skip_key">410978659659916410978659654556</string>
    <string name="msg_sign_in">Postez des annonces et faites des offres de véhicule, vous pouvez aussi suivre vos
        modèles préférés
    </string>
    <string name="default_web_client_id">79546982130-8jegptpaonfkobaogj2pno0deqo31oqd.apps.googleusercontent.com
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="invalid_credentials">invalid_credentials</string>
    <string name="brand_logo">brand_logo</string>
    <string name="notification">Notification</string>
    <string name="subscriptions">Abonnements</string>
    <string name="information">Information</string>
    <string name="versions">Versions</string>
    <string name="bids">Offres</string>
    <string name="good_morning">Bonjour, </string>
    <string name="user_profile_image">user profile image</string>
    <string name="model_image">model image</string>
    <string name="subscribe">s\'abonner</string>

    <string name="text1">The museum is housed in the Louvre Palace, originally built as a fortress in the late 12th century…</string>
    <string name="text2">Gwanghwamun is the main and largest gate of Gyeongbokgung Palace, in Jongno-gu, Seoul, South Korea.</string>
    <string name="text3">Tower Bridge is a combined bascule and suspension bridge in London built in 1886–1894.</string>
    <string name="follow">suivre</string>
    <string name="configure">configurer</string>
    <string name="compare">comparer</string>
    <string name="technical_sheet">Fiche Technique</string>
    <string name="images">Images</string>
    <string name="logout">Se déconnecter</string>
    <string name="my_cards">Paiement</string>
    <string name="msg_added_to_comparison_list">Cette version est ajoutée à la liste de comparaison</string>
    <string name="compare_list">Liste de comparaison</string>
    <string name="clear">Vider</string>
    <string name="options">Options</string>
    <string name="yes">Oui</string>
    <string name="no">Non</string>
    <string name="ajouter_une_annonce">Ajouter une annonce</string>
    <string name="explore">Explorer</string>
    <string name="my_listings">Mes annonces</string>
    <string name="quipements_en_options">Équipements en options</string>
    <string name="description">Description</string>
    <string name="exit_conf_confimation_msg">Si vous quittez la configuration, toutes vos modifications seront perdues</string>
    <string name="exit_add_listing_confimation_msg">Si vous quittez l\'annonce, toutes vos modifications seront perdues</string>
    <string name="exit_confguration">Quitter la configuration?</string>
    <string name="exit_add_listing">Quitter la création d\'annonce?</string>
    <string name="exit">Quitter</string>
    <string name="cancel">Annuler</string>
    <string name="configure_it">Configurez</string>
    <string name="colors">Couleurs</string>
    <string name="commander">commander</string>
    <string name="new_listing">Nouvelle annonce</string>
    <string name="title">Titre</string>
    <string name="price">Prix minimal</string>
    <string name="add_option">Ajouter une option</string>
    <string name="color">Couleur</string>
    <string name="no_color">Aucune couleur</string>
    <string name="add">Ajouter</string>
    <string name="create">créer</string>
    <string name="brand">Marque</string>
    <string name="model">Modèle</string>
    <string name="version">Version</string>
</resources>
