<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
            android:id="@+id/navigation_home"
            android:icon="@drawable/ic_menu_home_black_24dp"
            android:title="@string/title_home"/>
    <item
            android:id="@+id/navigation_search"
            android:icon="@drawable/ic_menu_search_black_24dp"
            android:title="@string/title_search"/>
    <item
            android:id="@+id/navigation_notification"
            android:icon="@drawable/ic_menu_notifications_none_black_24dp"
            android:title="@string/title_notification"/>
    <item
            android:id="@+id/navigation_user"
            android:icon="@drawable/ic_menu_person_outline_black_24dp"
            android:title="@string/title_listing"/>
</menu>