<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".view.add_listing.AddListingDialogFragment">
    <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/ab_config"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                app:menu="@menu/menu_add_listing"
                android:layout_height="wrap_content">
        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            app:layout_constraintTop_toBottomOf="@+id/ab_config"
            app:layout_constraintBottom_toBottomOf="parent"
    >
        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:divider="@drawable/empty_divider"
                      android:orientation="vertical"
                      android:padding="8dp"
                      android:showDividers="middle"
        >

            <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/price"
                    app:boxStrokeColor="@color/colorPrimary"
                    app:hintTextColor="@color/colorPrimary">
                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_price"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/description"
                    app:boxStrokeColor="@color/colorPrimary"
                    app:hintTextColor="@color/colorPrimary">
                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textMultiLine"/>
            </com.google.android.material.textfield.TextInputLayout>
            <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/brand"/>
            <Spinner
                    android:id="@+id/brands_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/model"/>
            <Spinner
                    android:id="@+id/models_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/version"/>
            <Spinner
                    android:id="@+id/versions_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/color"/>

            <Spinner
                    android:id="@+id/colors_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>



            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/options"/>

                <com.google.android.material.chip.ChipGroup
                        android:id="@+id/chipGroup2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:duplicateParentState="false">

                </com.google.android.material.chip.ChipGroup>
                <Spinner
                        android:id="@+id/options_spinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

            </LinearLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout">
                <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/images"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>
                <com.google.android.material.button.MaterialButton
                        android:id="@+id/button_add_image"
                        style="@style/Widget.MaterialComponents.Button.TextButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/add"
                        android:textColor="@color/colorPrimary"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_image"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
