<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/ab_config"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            app:layout_constraintTop_toBottomOf="@+id/ab_config"
            app:layout_constraintBottom_toTopOf="@+id/ll_config_bottom"
    >

        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="vertical"
                      android:showDividers="middle"
                      android:padding="8dp"
                      android:divider="@drawable/empty_divider"
        >
            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:layout_editor_absoluteX="0dp"
                    app:layout_constraintTop_toTopOf="parent"
                    android:id="@+id/constraintLayout"
                    android:layout_marginTop="8dp">

                <TextView
                        android:id="@+id/text_list_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/colors"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                        app:layout_constraintTop_toTopOf="parent"
                        android:layout_marginStart="16dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintBottom_toTopOf="@+id/chip_group"
                        android:layout_marginTop="14dp"
                        android:layout_marginBottom="14dp"/>
                <com.google.android.material.chip.ChipGroup
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:singleSelection="true"
                        android:id="@+id/chip_group"
                        app:layout_constraintBottom_toBottomOf="parent">

                </com.google.android.material.chip.ChipGroup>
            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:layout_editor_absoluteX="0dp"
                    app:layout_constraintTop_toTopOf="parent"
                    android:id="@+id/constraint_Layout_options"
                    android:layout_marginTop="8dp">

                <TextView
                        android:id="@+id/text_options"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/options"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                        app:layout_constraintTop_toTopOf="parent"
                        android:layout_marginStart="16dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintBottom_toTopOf="@+id/chip_group_options"
                        android:layout_marginTop="14dp"
                        android:layout_marginBottom="14dp"/>
                <com.google.android.material.chip.ChipGroup
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/chip_group_options"
                        app:layout_constraintBottom_toBottomOf="parent">

                </com.google.android.material.chip.ChipGroup>
            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>
    <LinearLayout
            android:id="@+id/ll_config_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            android:orientation="vertical"
            android:gravity="center_horizontal"
    >
        <TextView
                android:id="@+id/tv_availability"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"/>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp"
        android:gravity="center_horizontal">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Prix: "
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"/>
            <TextView
                    android:id="@+id/tv_config_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0 "
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" DZD"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"/>
        </LinearLayout>
        <com.google.android.material.button.MaterialButton
                android:id="@+id/button_command_version"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:text="@string/commander"
        />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
